--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,7 +53,7 @@
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
         <activity
-            android:name=".PerfilActivity"
+            android:name=".ProfileActivity"
             android:label="@string/title_activity_perfil">
         </activity>
     </application>
