--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,7 +54,8 @@
         </activity>
         <activity
             android:name=".ProfileActivity"
-            android:label="@string/title_activity_perfil">
+            android:label="@string/title_activity_profile"
+            android:theme="@style/AppTheme.NoActionBar">
         </activity>
     </application>
 
