Registro modo conductor aparentemente terminado. Falta hacer comunicarme con el appserver para transmitir los datos del auto del chofer

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,7 +45,8 @@
                 <data android:scheme="@string/fb_login_protocol_scheme"/>
             </intent-filter>
         </activity>
-        <activity android:name=".PassengerSignUpActivity"
+        <activity
+            android:name=".PassengerSignUpActivity"
             android:label="PassengerSignUpActivity"
             android:theme="@style/AppTheme.NoActionBar">
         </activity>
