--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -89,6 +89,10 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key"/>
 
+        <meta-data
+            android:name="com.google.android.places.API_KEY"
+            android:value="@string/google_places_key"/>
+
         <activity android:name=".PaymentActivity">
         </activity>
     </application>
