--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,9 +13,9 @@
          Google Maps Android API v2, but you must specify either coarse or fine
          location permissions for the 'MyLocation' functionality.
     -->
-<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 
-<application
+    <application
     android:allowBackup="true"
     android:icon="@mipmap/ic_launcher"
     android:label="@string/Taller_Uber"
@@ -107,6 +107,7 @@
 
     <activity android:name=".PaymentActivity">
     </activity>
+
 
 </application>
 
