--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.darius.taller_uber">
 
     <!-- To auto-complete the email text field in the login form with the user's emails -->
@@ -39,7 +40,7 @@
         <activity
             android:name="com.facebook.FacebookActivity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
-            android:label="@string/Taller_Uber" />
+            android:label="@string/Taller_Uber"/>
         <activity
             android:name="com.facebook.CustomTabActivity"
             android:exported="true">
