--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -91,6 +91,10 @@
             android:name=".ProfileActivity"
             android:label="@string/title_activity_profile"
             android:theme="@style/AppTheme.NoActionBar" />
+
+        <activity android:name=".MainActivity$Chat"
+            android:label="Chat"/>
+
         <activity
             android:name=".SignUpActivity"
             android:label="@string/title_activity_sign_up"
