Chat funcionando, falta pulir el manejo de la base de datos

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -100,6 +100,9 @@
             android:label="@string/title_activity_driver_sign_up"
             android:theme="@style/AppTheme.NoActionBar" />
 
+        <activity android:name=".ChatActivity"
+            android:label="ChatActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
